fix: 🐛 change the BOOK_DATE env variable

--- a/.env.template
+++ b/.env.template
@@ -3,7 +3,7 @@
 #
 # ID=A184891664 (身分證字號)
 # TRAVEL_DATE=2019/04/01（日期）
-# BOOK_DATE=2019/03/20 (日期)
+# BOOK_DATE=2019-03-20 (日期)
 # FROM_STATION=100 (站點號碼)
 # TO_STATION=144 (站點號碼)
 # TRAIN_NO=181 (車次)
