--- a/.env.template
+++ b/.env.template
@@ -6,7 +6,9 @@
 # BOOK_DATE=2019-03-20 (日期)
 # FROM_STATION=100 (站點號碼)
 # TO_STATION=144 (站點號碼)
-# TRAIN_NO=181 (車次)
+# TRAIN_NO1=144 (車次1)
+# TRAIN_NO2=144 (車次2)
+# TRAIN_NO3=144 (車次3)
 # TICKET_NUMBER=1 (購買張數)
 # DBC_USERNAME=
 # DBC_PASSWORD=
